--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,12 @@
  *= require_self
  */
 
-@import 'normalize';
+/*@import 'normalize';*/
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 html, body {
-	font-family: 'Raleway', sans-serif;
+	/*font-family: 'Raleway', sans-serif;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
