--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div id="sidebar">
 	<div id="logo">
 	<%= link_to root_path do %>
-		<%= image_tag "logo11.svg" %>
+		<%= image_tag "logo.svg" %>
 	<% end %>
 	</div>
 	<ul>
@@ -23,9 +23,9 @@
 
 	<ul>
 		<li class="category">Social </li>
-		<li><a href="https://facebook.com">Facebook</a> </li>
-		<li><a href="https://twitter.com">Twitter</a> </li>
-		<li><a href="https://linkedin.com">LinkedIn</a> </li>
+		<li><a href="#">Facebook</a> </li>
+		<li><a href="#">Twitter</a> </li>
+		<li><a href="#">LinkedIn</a> </li>
 		<li><a href="mailto:calvin@littlepig.cc">Email</a> </li>
 	</ul>
 
@@ -43,7 +43,7 @@
 	<% end %>
 			
 	<div class="buttons">
-		<%= link_to "New Post", new_post_path %>
+		<%= link_to "New Post", new_post_path, class: "button" %>
 		<button class="button">Log Out</button>
 	</div>
 </div>
