--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 		<%= image_tag "favicon.jpeg" %>
 	</div>
 
-	<div id="content">
+	<div id="content" style="text-align: justify; text-justify: inter-word;">
 		<h1>This is our profile</h1>
 		<p>
 		Aesthetic celiac banjo, small batch cardigan sustainable kogi polaroid shabby chic knausgaard. Brooklyn sustainable biodiesel, actually literally blue bottle lumbersexual tbh man bun skateboard truffaut activated charcoal ugh af copper mug. Single-origin coffee tacos DIY, kickstarter letterpress edison bulb four loko pour-over slow-carb photo booth artisan chambray trust fund. Banh mi beard pork belly, photo booth marfa cred thundercats pour-over actually lyft blog. +1 fap mustache pinterest farm-to-table. Fanny pack church-key crucifix celiac authentic fam. Small batch bicycle rights slow-carb normcore, narwhal lomo tofu prism.
