--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,56 +31,6 @@ a {
 	color: inherit;
 }
 
-#sidebar {
-	width: 250px;
-	position: fixed;
-	left: 0;
-	top: 0;
-	height: 100%;
-	background: #f5f7f9;
-	padding: 7em 0 0 0;
-	border-right: 1px solid #d6dce0;
-	#logo {
-		width: 40px;
-		position: absolute;
-		right: 3em;
-		top: 3em;
-	}
-	ul {
-		list-style: none;
-		text-align: right;
-		padding-right: 3em;
-		.category {
-			font-weight: 700;
-			font-size: 0.7em;
-			text-transform: uppercase;
-			color: #33acb7;
-		}
-		li {
-			padding: .5em 0;
-			a {
-				color: #9eafba;
-				text-decoration: none;
-				transition: all .4s ease;
-				&:hover {
-					color: #33acb7;
-				}
-			}
-		}
-		.active {
-			a {
-				color: #33acb7;
-			}
-		}
-	}
-	.sign_in {
-		position: absolute;
-		right: 3em;
-		top: 80%;
-		font-size: .8em;
-		color: #9eafba;
-	}
-}
 
 .button {
 	outline: none;
@@ -106,8 +56,8 @@ a {
 }
 
 #main_content {
-	margin-left: 250px;
 	#header {
+		
 		padding: 1em 3em;
 		border-bottom: 1px solid #d6dce0;
 		background: #f5f7f9;
@@ -119,16 +69,16 @@ a {
 			color: #9eafba;
 			text-decoration: none;
 		}
-		.buttons {
+		/*.buttons {
 			float: right;
 			margin-top: -6px;
 			.button {
 				font-size: .8em;
 				margin-left: .5em;
 			}
-		}
+		}*/ 
 	}
-	.post_wrapper {
+	/*.post_wrapper {
 		padding: 3em;
 		border-bottom: 1px solid #d6dce0;
 		.title {
@@ -142,12 +92,12 @@ a {
 					color: #33acb7;
 				}
 			}
-		}
+		} 
 		.date_and_author {
 			color: #9eafba;
 			margin: .5em 0 0 0;
 		}
-	}
+	}*/
 	#post_content {
 		padding: 1em 3em;
 		.title {
@@ -234,9 +184,9 @@ a {
 			}
 		}
 	}
-	.links {
+/*	.links {
 		margin: 2em 0;
-	}
+	}*/
 	input[type="text"], input[type="email"], input[type="password"], textarea {
 		width: 90%;
 		border: 1px solid #d6dce0;
@@ -251,7 +201,7 @@ a {
 	textarea {
 		min-height: 180px;
 	}
-	input[type="submit"] {
+	/*input[type="submit"] {
 		outline: none;
 		background: transparent;
 		border: 1px solid #d6dce0;
@@ -263,5 +213,5 @@ a {
 			border: 1px solid #33acb7;
 			color: #33acb7;
 		}
-	}
+	}*/
 }
