--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,12 @@
-<div class="comment clearfix">
-	<div class="comment_content">
-		<p class="comment_name"><strong><%= comment.name %></strong></p>
-		<p class="comment_body"><%= comment.body %> </p>
-		<p class="comment_time"><%= time_ago_in_words(comment.created_at) %> ago </p>
-	</div>
-
-	<p>
-		<%= link_to 'Delete', [comment.post, comment], method: :delete, class:"button", data: {confirm: 'Are you sure?'} %>
-	</p>
+<div class="well row">
+  <div class="col-xs-6">
+	<center>
+		<p style="text-transform: uppercase;"><strong><%= comment.name %></strong></p>
+		<p><%= comment.body %> </p>
+		<p><%= time_ago_in_words(comment.created_at) %> ago </p>
+		<p>
+			<%= link_to 'Delete', [comment.post, comment], method: :delete, class:"btn btn-danger", data: {confirm: 'Are you sure?'} %>
+		</p>
+	</center>
+  </div>	
 </div>
