--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,19 @@
-<div id="post_content">	
-	<h1 class="title">
+<div id="">	
+	<h1 class="">
 		<%= @post.title %>
 	</h1>
 
-	<p class="body">
+	<p class="">
 		<%= @post.body %>
 	</p>
 
-	<p class="date">
+	<p class="">
 		Submitted <%= time_ago_in_words(@post.created_at) %> ago
 		| <%= link_to 'Edit', edit_post_path(@post) %>
 		| <%= link_to 'Delete', post_path(@post), method: :delete, data: {confirm: 'Are you sure?'} %>
 	</p>
 
-	<div id="comments">
+	<div id="">
 		<h2><%= @post.comments.count %> Comment(s)</h2>
 		<%= render @post.comments %>
 
