--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.padding {
+	padding-top: 60px;
+}
+
 html, body {
 	/*font-family: 'Raleway', sans-serif;*/
 }
