--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,12 +26,10 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
       <%= link_to "New Post", new_post_path, class: "btn btn-primary" %>
-      <%= link_to "Log Out", root_path, class: "btn btn-danger" %>
-      <%= link_to "Sign Up", new_post_path, class: "btn btn-primary" %>
-      <%= link_to "Log In", root_path, class: "btn btn-info" %>
-<!--       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+      <%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "btn btn-danger") %>
+      <% end %>
     </ul>
   </div>
 </nav>
